--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Hello World</title>
 </head>
 
 <body>
     <header>
         <h1>Hello World</h1>
-        <p>Que bom te ver por aqui, Fulano</p>
+        <p>Que bom te ver por aqui, <span id="nome-usuario">Fulano</span></p>
     </header>
     <section>
         <h2>HTML</h2>
-        <p>Hypertext Markup Language (em português, Linguagem de Marcação de Texto) estrutura a sua página web</p>
+        <p>Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
         <h2>CSS</h2>
-        <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web</p>
+        <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
+        <img src="imagens/Olá Mundo.png" alt="globo mundi, com o título Hello World">
     </section>
     <footer>
         <p>Uma página desenvolvida por Alura Start</p>
