--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <section>
         <h2>HTML</h2>
-        <p>Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
+        <p class="texto-ingles">Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
         <h2>CSS</h2>
         <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
         <img src="imagens/Olá Mundo.png" alt="globo mundi, com o título Hello World">
@@ -23,6 +23,8 @@
     <footer>
         <p>Uma página desenvolvida por Alura Start</p>
     </footer>
+
+    <script src="script.js"> </script>
 </body>
 
 </html>
