--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <section>
         <h2>HTML</h2>
         <p class="texto-ingles">Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
+        <h2>Outras linguagens</h2>
+        <li id="lista">Lista</li>
         <h2>CSS</h2>
         <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
         <img src="imagens/Olá Mundo.png" alt="globo mundi, com o título Hello World">
